# inboxify

./: Cargo.toml  README.md
.github/: config.yml
migrations/: 20250401231524_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
